preload state added to index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             var game = new Phaser.Game(603, 435, Phaser.CANVAS, 'game');
 
             game.state.add("Boot", boot);
+            game.state.add("Preload", preload);
             game.state.start("Boot");
         </script>
     </body>
