mute button and semicolons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>LaserTank-HTML5</title>
         <script src='phaser.min.js'></script>
+        <script src='phaser-ui-tools.js'></script>
+        <script src='binreader.js'></script>
         <script src='src/boot.js'></script>
         <script src='src/preload.js'></script>
         <script src='src/game.js'></script>
